Fix search bar on mobile

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ nav a {
         display: none;
     }
 
-    nav > * {
+    nav a, nav .search {
         display: block;
         width: 100%;
 
